# dobot_quad_integrated

./: README.md
integrated_outputs/: balance_attitude_20260519_175701.csv  balance_attitude_20260519_175701.html
src/dobot_integrated_demo/: package.xml  setup.cfg  setup.py
src/dobot_integrated_demo/config/: integrated_demo.yaml
src/dobot_integrated_demo/dobot_integrated_demo/: config.py
src/dobot_integrated_demo/dobot_integrated_demo/balance/: attitude_plot_recorder_node.py  balance_compensator_node.py  demo_monitor_node.py  imu_reader_node.py
src/dobot_integrated_demo/dobot_integrated_demo/core/: integrated_state_manager_node.py  motion_gateway_node.py  safety_arbitrator_node.py
src/dobot_integrated_demo/dobot_integrated_demo/perception/: depth_bridge_node.py
src/dobot_integrated_demo/dobot_integrated_demo/voice/: action_executor.py  asr_engine.py  audio_capture.py  audio_player.py  intent_parser.py  tts_engine.py  voice_control_node.py
src/dobot_integrated_demo/launch/: integrated_demo.launch.py
src/dobot_integrated_demo/rviz/: integrated_demo.rviz
src/dobot_integrated_interfaces/: CMakeLists.txt  package.xml
src/dobot_integrated_interfaces/msg/: BalanceStatus.msg  SafetyState.msg  SystemState.msg
src/dobot_integrated_interfaces/srv/: RobotCommand.srv  SetDemoMode.srv
